fixe z-index arrow-up

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -124,7 +124,7 @@
   width: 52px;
   height: 52px;
   display: none;
-  z-index: 999;
+  z-index: 111;
 
   cursor: pointer;
   opacity: 0.7;
